feat: adding send password changes.

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -18,6 +18,12 @@
             Iniciar sesión
           </button-base>
         </form-base>
+      </div>
     </div>
+    <p class="mt-2"><a class="link-opacity-75-hover"
+      [routerLink]="'/send-resest-password'">
+      ¿Has olvidado tu contraseña?
+    </a></p>
+
   </div>
 </div>
