--- a/src/app/components/layouts/main-header/main-header.component.html
+++ b/src/app/components/layouts/main-header/main-header.component.html
@@ -3,5 +3,20 @@
     <li class="nav-item">
       <div class="nav-link" data-widget="pushmenu" role="button"><i class="fas fa-bars"></i></div>
     </li>
+    <li class="nav-item">
+      <div [routerLink]="'/auth/me'" class="nav-link user-panel d-flex justify-content-center align-items-center" data-widget="pushmenu" role="button">
+        <div class="">
+          <img style="height: 24px; width: 24px; object-fit: cover;" src="../../dist/img/liz.png" class="img-circle" alt="User Image">
+        </div>
+        <div class="text-sm" style="padding-left: 8px;">
+          {{ authService.user()?.fullName }}
+        </div>
+      </div>
+    </li>
+    <li class="nav-item">
+      <div (click)="logout()" class="nav-link" data-widget="pushmenu" role="button">
+        Logout
+      </div>
+    </li>
   </ul>
 </nav>
